<resources>
    <string name="app_name">Palinroam</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="first_name">First name </string>
    <string name="last_name">Last name </string>
    <string name="gender_text">Gender </string>
    <string name="date_of_birth_text">Date of birth </string>
    <string name="address">Address </string>
    <string name="enter_address">Enter your address </string>
    <string name="country">Country </string>
    <string name="pincode">Pincode </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="forget_password">Forgot Password  ?</string>
    <string name="social_login_text">Or Login  with</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to signup -->
    <string name="prompt_name">Name</string>
    <string name="prompt_comfirm_password">Confirm Password</string>
    <string name="error_invalid_username">This Username is too short</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="action_sign_up_agreement">Agree to terms and conditions</string>


    <!-- Login and Signup Title text... -->
    <string name="login_name">Login</string>
    <string name="signup_name">Sign Up</string>

    <!-- Verification Activity Texts... -->
    <string name="verification_header_name">Verify your ID</string>
    <string name="verification_small_header_name">Provide an offical ID</string>
    <string name="govt_button_text">Government ID</string>
    <string name="govt_verify_button_text">verify</string>

    <!-- Welcome Activity Texts... -->
    <string name="welcome_page_text">Welcome Name !</string>
    <string name="welcome_page_second_text">Complete your profile  -  and off we go!</string>
    <string name="verfy_mobile_text">Verify mobile number</string>
    <string name="welcome_page_mobile_editext_hint">+91 - </string>
    <string name="welcome_page_otp_editext_hint"> Your OTP </string>
    <string name="title_activity_find_ride">FindRideActivity</string>
    <!-- Search Activity Texts... -->
    <string name="find_ride_leave_from">Leaving from</string>
    <string name="find_ride_search_button">Search</string>
    <string name="find_ride_going_to">Going to</string>
    <string name="findride_text">FIND RIDE</string>
    <string name="stop_over_hint">Stop-Over points </string>
    <string name="offerride_text">OFFER RIDE</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="offerride_next_button">Next</string>
    <string name="offer_ride_returntrip_text">Round trip</string>
    <string name="dep_date">Departure date</string>
    <string name="return_date">Return date</string>
    <string name="title_activity_list_of_ride">ListOfRideActivity</string>

    <!-- list of ride Activity Texts... -->
    <string name="friends_text">24 Friends</string>
    <string name="activate_mail_text">Please verify  E-mail to activate your account </string>
    <string name="add_friend_text">Add Friend</string>
    <string name="co_passenger_text">Co-Passenger</string>
    <string name="tag_friend_text">Tag Friend</string>
    <string name="tagged_text">Tagged</string>
    <string name="mutual_text">24 Mutual Friends</string>
    <string name="verified_member_text">Verified Member</string>
    <string name="demo_community_text">Ashok Nagar,Chennai</string>
    <string name="female_only_text">Female only</string>
    <string name="stop_over_text">STOP - OVER</string>
    <string name="certainty_text">Certainty</string>
    <string name="name_text">Sudhas kumar </string>
    <string name="name_has_text"> #Sudhas kumar </string>
    <string name="age_text"> 24 Age </string>
    <string name="name_seat_text">/Seat</string>
    <string name="sample_amt">300</string>
    <string name="no_seat_text">2 Seats</string>
    <string name="demo_date_text">Sun 04 Oct</string>
    <string name="demo_time_text">04:30 am</string>
    <string name="low_certainty">Low Certainty</string>
    <string name="medium_certainty">Medium Certainty</string>
    <string name="high_certainty">High Certainty</string>
    <string name="title_activity_filter">FilterActivity</string>

    <!-- Filter activity -->
    <string name="morning_text"> 6:00 am - 11:59 am </string>
    <string name="afternoon_text"> 12:00 pm - 5:59 pm </string>
    <string name="evening_text"> 6:00 pm - 11:59 pm </string>
    <string name="night_text"> 12:00 am - 5:59 am </string>
    <string name="price">Price</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="filter_button_text">Apply Filters</string>
    <string name="join_ride_button_text">Join Sudhas</string>
    <string name="high_rated_rider_text">High rated riders only</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

    <!-- User Profile  activity Text -->
    <string name="about_text"> About</string>
    <string name="demo_count_text"> 150</string>
    <string name="trip_request_text"> Trips Requested</string>
    <string name="request_text">Requests</string>
    <string name="successful_trips_text">Successful Trips</string>
    <string name="cancelled_trips"> Cancelled Trips</string>
    <string name="update_info_text"> Update Info</string>
    <string name="upcoming_rides_text"> Upcoming Rides</string>
    <string name="connect_friends_text"> Connect your friends</string>
    <string name="demo_date_and_time"> Sun 04 Jul - 06:00 pm</string>
    <string name="demo_city1"> Chennai</string>
    <string name="demo_city2"> Kovilpatti</string>
    <string name="share_text"> Share</string>
    <string name="demo_kms"> (1200 Km)</string>
    <string name="search_friend_text"> Search your friends</string>
    <string name="import_text"> Import</string>
    <string name="invite_policy_text"> Your contacts are safe with us ! We ll import your address \n book to Palinroam to suggest connections \n and help you. </string>
    <string name="invite_known_palinroam"> See who you already  know on \n\t\t\t\t\t\t\t\t\t Palinroam</string>

    <!-- About Activity Text -->
    <string name="personal_information_text"> Personal Information</string>
    <string name="vehicle_details_text"> Vehicle Details</string>
    <string name="preferences"> Perferences</string>
    <string name="demo_mailid"> sudhasmca91@gmail.com</string>
    <string name="demo_phone"> +91 987654321</string>
    <string name="phone_prefix"> +91 - </string>
    <string name="hint_phone"> Enter 10 digit number</string>
    <string name="demo_gender"> Male</string>
    <string name="demo_birthdate"> 16/07/1991</string>
    <string name="demo_address">17-A, North Boag Road, T Nagar, Chennai, Tamil Nadu 600017</string>
    <string name="demo_car_model"> Audi Q5- 2.0 TFSI (3+1)</string>
    <string name="demo_making_date"> Make : 2016</string>
    <string name="demo_car_spec"> Petrol, Dark grey</string>
    <string name="feature_text"> Features :</string>
    <string name="luggage_text"> Luggage :</string>
    <string name="demo_comment_text">  This is a really great succinct yet fully detailed answer. Thanks for writing that up so clearly. It helped me understand how to use bundles very quickly </string>
    <string name="demo_about_car"> Comfort Level - Luxury</string>
    <string name="top_ride_in_city_text"> Top rides in your city</string>

    <!-- EditProfile Activity Text -->
    <string name="view_your_profile_text"> View your profile</string>
    <string name="address_text"> Address </string>
    <string name="add_preference_text"> + Add preferences</string>
    <string name="add_car_text"> + Add car</string>
    <string name="street_text"> House no and street name</string>
    <string name="city_text"> City</string>
    <string name="phone_text"> Mobile</string>
    <string name="genter_text"> Gender</string>
    <string name="birthdate_text"> Birthdate (dd/mm/yy)</string>
    <string name="zip_code_text"> Zip code</string>
    <string name="country_text"> Country</string>
    <string name="id_proof_text"> Your ID proof</string>
    <string name="add_id_proof"> + Add your ID proof</string>
    <string name="car_details_text"> Car Details</string>
    <string name="here_we_go_text"> Here we go !</string>
    <string name="request_sent_text"> Your request has been sent.</string>
    <string name="notify_message_text"> We ll notify you once your request accepted by Rider.</string>
    <string name="wallet_text"> you pay the rider  through wallet.</string>
    <string name="stay_connect_text"> Stay connected - Happy journey !</string>
    <string name="cancelation_policy_text">Cancellation : Strict</string>
    <string name="title_activity_splash">Palinroam</string>


    <!-- AddCarActivity Activity Text -->
    <string name="carname_text">Swift</string>
    <string name="carcolor_text">(Red)</string>
    <string name="cardesc_text">Car with Air Conditioning </string>
    <string name="edit_text">Edit</string>

    <string name="dummy_content">Palinroam</string>
    <string name="title_activity_friends_detailed">FriendsDetailedActivity</string>

    <!-- Offer a ride Activity Text -->
    <string name="price_detail_text">Price  Details</string>
    <string name="preferred_passanger_text">Perferred Co-Passenger</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="both_text">Both</string>
    <string name="seat_text">Seat</string>
    <string name="ride_certainity_text">Ride Certainity</string>
    <string name="cancellation_mode_text">Cancellation Policy</string>
    <string name="strict_text">Strict</string>
    <string name="modurate_text">Modurate</string>
    <string name="easy_text">Easy</string>
    <string name="demo_route">Chennai to \n Madurai</string>
    <string name="agreement_text">I have agreed to the terms and conditions</string>
    <string name="title_activity_adding_new_car">AddingNewCarActivity</string>

    <!-- Add car Details text... -->
    <string name="car_make_text">Make</string>
    <string name="car_model_text">Model</string>
    <string name="car_color_text">Color</string>
    <string name="car_comfort_text">Comfort</string>
    <string name="car_seats_text">Available seat</string>
    <string name="wifi_text">Wi-fi</string>
    <string name="fuel_type_text">Fuel type</string>
    <string name="vehicle_number_text">Vehicle Number</string>
</resources>
