<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/homeimage"
    tools:context="com.mbarc.palinroam.activities.OfferRideActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="40dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="vertical"
                android:padding="10dp">

                <com.mbarc.palinroam.views.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_detail_text"
                    android:textColor="@color/icons"
                    android:textSize="18sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/stopover_price_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:orientation="vertical"
                android:padding="10dp">

                <com.mbarc.palinroam.views.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preferred_passanger_text"
                    android:textColor="@color/icons"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/co_passanger_group"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male_text"
                        android:id="@+id/male_passaenger_button"
                        android:textColor="@color/icons"
                        app:buttonTint="@color/icons" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/female_passanger_button"
                        android:text="@string/female_text"
                        android:textColor="@color/icons"
                        app:backgroundTint="@color/icons"
                        app:buttonTint="@color/icons" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/both_text"
                        android:id="@+id/both_button"
                        android:textColor="@color/icons"
                        app:backgroundTint="@color/icons"
                        app:buttonTint="@color/icons" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:orientation="vertical"
                android:padding="10dp">

                <com.mbarc.palinroam.views.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_details_text"
                    android:textColor="@color/icons"
                    android:textSize="18sp" />

                <com.mbarc.palinroam.views.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/add_car_text"
                    android:textColor="@color/icons"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@color/black">
                <com.mbarc.palinroam.views.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/seat_text"
                    android:textColor="@color/icons"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end|center">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/seat_minus_button"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/minusicon"/>
                    <com.mbarc.palinroam.views.RobotoTextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/tab_indicator_color"
                        android:textSize="19sp"
                        android:gravity="center"
                        android:id="@+id/no_of_seat_text"
                        android:text="1"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/seat_plus_button"
                        android:src="@mipmap/plusicon"/>
                </LinearLayout>

            </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="@color/black">
                    <com.mbarc.palinroam.views.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/luggage_text"
                        android:textColor="@color/icons"
                        android:textSize="16sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:gravity="right">
                        <android.support.v7.widget.AppCompatSpinner
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:gravity="bottom"
                            android:id="@+id/luggage_spin"
                            />
                    </LinearLayout>
                    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:orientation="vertical"
                android:padding="10dp">

                <com.mbarc.palinroam.views.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preferences"
                    android:textColor="@color/icons"
                    android:textSize="18sp" />

                <com.mbarc.palinroam.views.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/add_preference_text"
                    android:textColor="@color/icons"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:orientation="vertical"
                android:padding="10dp">

                <com.mbarc.palinroam.views.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ride_certainity_text"
                    android:textColor="@color/icons"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/ride_certian_group"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high"
                        android:id="@+id/high_certian_button"
                        android:textColor="@color/icons"
                        app:buttonTint="@color/icons" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/medium_certian_button"
                        android:text="@string/medium"
                        android:textColor="@color/icons"
                        app:buttonTint="@color/icons" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/low"
                        android:id="@+id/low_certian_button"
                        android:textColor="@color/icons"
                        app:buttonTint="@color/icons" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:orientation="vertical"
                android:padding="10dp">

                <com.mbarc.palinroam.views.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancellation_mode_text"
                    android:textColor="@color/icons"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/policy_group"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strict_text"
                        android:id="@+id/strict_policy_button"
                        android:textColor="@color/icons"
                        app:buttonTint="@color/icons" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/modurate_text"
                        android:id="@+id/modurate_policy_button"
                        android:textColor="@color/icons"
                        app:buttonTint="@color/icons" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/easy_text"
                        android:id="@+id/easy_policy_button"
                        android:textColor="@color/icons"
                        app:buttonTint="@color/icons" />
                </RadioGroup>
            </LinearLayout>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/agree_checkbox"
                android:layout_marginTop="10dp"
                app:buttonTint="@color/icons"
                android:textColor="@color/icons"
                android:text="@string/agreement_text"
                />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
    <include layout="@layout/join_ride_footer" />
</RelativeLayout>
