<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/list_background"
    tools:context="com.mbarc.palinroam.activities.InviteActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <android.support.v7.widget.SearchView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_color"
        android:id="@+id/search_friend"
        android:queryHint="@string/search_friend_text"
        android:visibility="gone"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="40dp"
    android:id="@+id/main_text_layout"
    android:layout_below="@+id/search_friend"
    android:gravity="center">
<com.mbarc.palinroam.views.RobotoTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="22sp"
    android:gravity="center_vertical"
    android:textColor="@color/secondary_text"
    android:text="@string/invite_known_palinroam"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/import_text"
        android:textColor="@color/icons"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@+id/main_text_layout"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/invite_list_layout"
        android:visibility="gone"
        android:orientation="vertical">
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/invite_list"
        android:padding="10dp"
        android:layout_marginTop="30dp"/>
    </LinearLayout>
</LinearLayout>
<com.mbarc.palinroam.views.RobotoTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textColor="@color/common_plus_signin_btn_text_light_disabled"
    android:layout_marginBottom="5dp"
    android:layout_alignParentBottom="true"
    android:textSize="14sp"
    android:text="@string/invite_policy_text"
    />

</RelativeLayout>
